<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_choose_profile" android:title="@string/option_choose_profile"
        android:orderInCategory="150" app:showAsAction="never">
        <menu>
            <item android:id="@+id/profile_submenu_placeholder" android:title="Placeholder"/>
        </menu>
    </item>
    <item android:id="@+id/action_edit_current_profile" android:title="@string/option_edit_current_profile"
        android:orderInCategory="175" app:showAsAction="never" />
</menu>
